--- a/Index.html
+++ b/Index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeatherDashHW</title>
     <link rel="stylesheet" , type="text/css" href="HW6.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/0ebf148f0e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="Top-Bar">
-        <h1><i class="fas fa-cloud-sun"> Arc's Weather Dashbored</i></h1>
+    <div class="container">
+        <nav class="navbar navbar-expand-ls navbar-dark bg-dark">
+            <h1><i class="fas fa-cloud-sun"> Arc's Weather Dashbored</i></h1>
+        </nav>
+
     </div>
     <script src="jquery-3.4.1.min.js"></script>
     <script src="HW6.js"></script>
